reorganised files and folder