@@ -1,93 +1,87 @@
-# Traffic-Light-Control
+# Traffic Light Control Prototype
 
-CS 460 class project implemented with Java and JavaFX. Java handles the controller, socket communication, device simulation, and tests. JavaFX displays a six-lane road with three lanes in each direction, opposing traffic, and a yellow center line.
+A small Java/JavaFX prototype built around the required workflow:
 
-## System architect deliverables
+```text
+Main test harness -> Multiplexor -> socket -> JavaFX digital twin
+```
 
-- [System architecture](docs/system-architecture.md)
-- [Device interface specification](docs/device-interface-specification.md)
-- [Integration plan](docs/integration-plan.md)
+`Main` reads `scripts/test-devices.txt`. The `Multiplexor` routes each command
+over one socket to `DigitalTwinSimulator`, which owns the device objects and
+returns their new state. The JavaFX window also generates moving traffic; cars
+randomly travel straight, turn left, or turn right. Every maneuver stops at red
+and yellow lights and proceeds only when its approach is green. Vehicle
+detection is embedded in the simulation: approaching traffic updates hidden
+detector devices and automatically selects the next signal to serve. The UI
+therefore shows neither manual signal-head controls nor detector controls.
 
-## Project structure
+## Source structure
 
-The project uses the standard `src/main/java` and `src/test/java` layout and
-direct `javac` commands. This keeps the shared protocol and controller free of
-external dependencies while the JavaFX module is developed separately.
+```text
+src/main/java/
+├── Main.java
+├── Multiplexor.java
+├── Message.java
+├── ui/
+│   ├── DigitalTwinSimulator.java
+│   ├── IntersectionView.java
+│   ├── TrafficSimulation.java
+│   └── Vehicle.java
+└── devices/
+    ├── Device.java
+    ├── TrafficLight.java
+    ├── PedestrianButton.java
+    └── VehicleDetector.java
 
-The controller entry point is
-`trafficcontrol.controller.TrafficController`. The obsolete empty root-level
-`main.java` on the Multiplexor branch should not be merged.
+scripts/
+└── test-devices.txt
+```
 
-## Build and test controller
+The source files deliberately use the default package to keep this classroom
+prototype small while retaining the requested folders.
 
-Java 11 or newer is required. From the repository root:
+## Build
+
+Set `PATH_TO_FX` to the JavaFX SDK `lib` directory, then run:
 
 ```sh
 mkdir -p out
-javac -d out $(find src/main/java -name '*.java')
-javac -cp out -d out $(find src/test/java -name '*.java' ! -path 'src/test/java/ui/*')
-java -ea -cp out trafficcontrol.controller.TrafficControllerLogicTest
-java -ea -cp out trafficcontrol.controller.TrafficControllerSocketTest
-java -ea -cp out trafficcontrol.testharness.TestHarnessScriptTest
+javac --module-path "$PATH_TO_FX" --add-modules javafx.controls \
+  -d out $(find src/main/java -name '*.java')
 ```
 
-No network connection or third-party test library is required. The test suite
-checks protocol parsing, registration, vehicle and pedestrian requests, safe
-yellow/all-red transitions, invalid events, device faults, socket routing, and
-connection loss.
+## Run
 
-## Run the controller
+Open three terminals in the project directory.
 
-Start the Multiplexor first, then run:
+Terminal 1 — start the router:
 
 ```sh
-java -cp out trafficcontrol.controller.TrafficController [host] [port]
+java -cp out Multiplexor
 ```
 
-The defaults are `localhost` and port `5050`. The expected complete-system
-startup order is:
-
-1. Multiplexor
-2. JavaFX simulator with its device simulator
-3. Traffic controller
-4. Test harness
-
-On startup the controller registers as `controller` and commands every light
-to red before processing events.
-
-## Device simulator
-
-Member 3's build, test, startup, and JavaFX connection instructions are in
-[docs/device-simulator.md](docs/device-simulator.md).
-
-## Run test harness
-
-The entry point is `trafficcontrol.testharness.TestHarness`. It
-connects to the Java Multiplexor, registers as `test-harness`, runs scripted
-socket test cases, validates responses, and prints a pass/fail report.
-
-Compile first:
+Terminal 2 — start the JavaFX digital twin:
 
 ```sh
-mkdir -p out
-javac -d out $(find src/main/java -name '*.java')
-javac -cp out -d out $(find src/test/java -name '*.java' ! -path 'src/test/java/ui/*')
+java --module-path "$PATH_TO_FX" --add-modules javafx.controls \
+  -cp out DigitalTwinSimulator localhost 5050
 ```
 
-Run the default Multiplexor smoke test:
+Terminal 3 — execute the device script with `Main`:
 
 ```sh
-java -cp out trafficcontrol.testharness.TestHarness
+java -cp out Main localhost 5050 scripts/test-devices.txt
 ```
 
-Run explicit scripts:
+The test passes when every sent command receives the expected device state.
 
-```sh
-java -cp out trafficcontrol.testharness.TestHarness localhost 5050 \
-  test-scripts/test-multiplexer-smoke.tfs \
-  test-scripts/test-controller-invalid-source.tfs
+## Script format
+
+```text
+SEND TYPE|SOURCE|DESTINATION|ACTION|VALUE
+EXPECT TYPE|SOURCE|DESTINATION|ACTION|VALUE
+WAIT milliseconds
 ```
 
-Script files support `SEND`, `SEND_RAW`, `EXPECT`, `EXPECT_FIELDS`, `WAIT`,
-and `TIMEOUT`. `EXPECT_FIELDS` compares the five protocol fields and allows
-`*` as a wildcard field.
+The included script tests all four traffic lights, all four pedestrian buttons,
+and all four vehicle detectors.
